Checkbox Component Styling Fix (https://github.com/woocommerce/woocommerce-blocks/pull/5164)
* Wrap label in div to prevent clickable area growing too large

* Prevent pointer events on svg

* Double gap in editor

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/inner-blocks/checkout-terms-block/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/checkout/inner-blocks/checkout-terms-block/editor.scss
@@ -12,10 +12,6 @@
 	}
 }
 
-.wc-block-components-checkbox {
-	margin-right: $gap;
-}
-
 .wc-block-checkout__terms_notice .components-notice__action {
 	margin-left: 0;
 }
